done adding button

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>My First Web</h1>
     <h3>Late night practice</h3>
+    <input type="text">
+    <br>
+    <button>Click me</button>
 </body>
 </html>
